# learningFastapi

./: .gitignore  Dockerfile  README.md  pyproject.toml
learning_fastapi/: main.py  tags.py
learning_fastapi/routers/: background_tasks.py  dependencies.py  examples.py  forms_and_files.py  items_fake_db.py  params.py  request_body.py  response_models.py  security.py  sql.py
scripts/: docker_build.ps1  docker_run.ps1  generate_schema.py  run.ps1
tests/: test_root.py  test_sql.py
