[tool.poetry]
name = "learning-fastapi"
version = "0.1.0"
description = ""
authors = ["skarfie123 <rahulpai@rocketmail.com>"]
readme = "README.md"
packages = [{include = "learning_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = {extras = ["email"], version = "^1.10.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
