[tool.poetry]
name = "learning-fastapi"
version = "0.1.0"
description = ""
authors = ["skarfie123 <rahulpai@rocketmail.com>"]
readme = "README.md"
packages = [{ include = "learning_fastapi" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
pydantic = { extras = ["email"], version = "^1.10.8" }
python-multipart = "^0.0.6"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
sqlalchemy = "^2.0.17"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
